syntax = "proto3";

package pb;
option go_package ="./;pb";

//有些函数，没有返回值，统一定义一个，方便处理
message Empty {

}

//心跳，长连接保活。(不要与PING混淆)
message Heartbeat{
    int64 time = 1;
}

message FDCloseEvent {
    int32 user_id = 1;
    int32 source = 2;
}

message PingReq{
    string  request_id  = 1 ;
    string  trace_id  = 2 ;
    int64   client_req_time = 3 ;
    int64   client_receive_time = 4 ;
    int64   server_receive_time = 5 ;
    int64   server_response_time = 6 ;
}

message PongRes{
    string  request_id  = 1 ;
    string  trace_id  = 2 ;
    int64   client_req_time = 3 ;
    int64   client_receive_time = 4 ;
    int64   server_receive_time = 5 ;
    int64   server_response_time = 6 ;
}
